After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 648642 - rtpsession: Ensure ssrc collisions aren't timed out immediately
rtpsession: Ensure ssrc collisions aren't timed out immediately
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-04-25 20:31 UTC by Olivier Crête
Modified: 2011-07-25 14:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpsession: Wait longer to timeout SSRC collision (1.67 KB, patch)
2011-04-25 20:31 UTC, Olivier Crête
committed Details | Review

Description Olivier Crête 2011-04-25 20:31:34 UTC
Created attachment 186616 [details] [review]
rtpsession: Wait longer to timeout SSRC collision

Using the current RTCP interval to timeout SSRC collision can lead to
collisions being timed out immediately if a BYE packet is sent because
it is sent immediately, so the interval is 0. This is not what we
want. So just set a static 10 times the default RTCP interval, it
should be enough

This should probably wait after the freeze, just in case (its really a corner case), but I'm attaching it now anyway.
Comment 1 David Schleef 2011-06-30 07:07:48 UTC
Ping.  the freeze is over.
Comment 2 Mark Nauwelaerts 2011-07-25 14:20:58 UTC
commit 4d48109f9d5da9106130485d37841bbf3423cd6f
Author: Olivier Crête <olivier.crete@collabora.co.uk>
Date:   Mon Apr 25 16:13:38 2011 -0400

    rtpsession: Wait longer to timeout SSRC collision
    
    Using the current RTCP interval to timeout SSRC collision can lead to
    collisions being timed out immediately if a BYE packet is sent because
    it is sent immediately, so the interval is 0. This is not what we
    want. So just set a static 10 times the default RTCP interval, it
    should be enough
    
    https://bugzilla.gnome.org/show_bug.cgi?id=648642